PyMaker/datas/object2/RawHTML/i18801/Python_DOC_referPages.pip-install-rauth-fails-syntax-error.txt
<div class="post-text" itemprop="text">
<p>I just installed Python 3.3 and then I tried to install rauth by issuing the command:</p>
<p>pip install rauth </p>
<p>and I get this error:</p>
<pre><code>Downloading/unpacking rauth
Running setup.py egg_info for package rauth
Traceback (most recent call last):
    File "&lt;string&gt;", line 16, in &lt;module&gt;
    File "c:\users\pipul\appdata\local\temp\pip-build-pipul\rauth\setup.py", l
    ine 4, in &lt;module&gt;
    from rauth import __version__
    File ".\rauth\__init__.py", line 30, in &lt;module&gt;
    from .service import OAuth1Service, OAuth2Service, OflyService
    File ".\rauth\service.py", line 23
    except KeyError, e:  # pragma: no cover
                   ^
SyntaxError: invalid syntax
Complete output from command python setup.py egg_info:
Traceback (most recent call last):

File "&lt;string&gt;", line 16, in &lt;module&gt;

File "c:\users\pipul\appdata\local\temp\pip-build-pipul\rauth\setup.py", line 4, in    &lt;module&gt;

from rauth import __version__

File ".\rauth\__init__.py", line 30, in &lt;module&gt;

from .service import OAuth1Service, OAuth2Service, OflyService

File ".\rauth\service.py", line 23

except KeyError, e:  # pragma: no cover

               ^

SyntaxError: invalid syntax

----------------------------------------
Command python setup.py egg_info failed with error code 1 in c:\users\pipul\appd
</code></pre>
<p>ata\local\temp\pip-build-pipul\rauth
    Storing complete log in C:\Users\pipul\pip\pip.log</p>
<pre><code>## Heading ##c:\Python33\Scripts&gt;
</code></pre>
<p>Similarly installing oauth2 also fails. But installing selenium succeeds. </p>
<p>Now what could be the thing that is causing this failure?</p>
<p>Thanks in advance.</p>
</div>
<div class="post-text" itemprop="text">
<p>Like many packages, rauth currently does not support Python 3.  However, it looks like there is a branch where they are working on it.  See <a href="https://github.com/litl/rauth/issues/82" rel="nofollow">here</a>.</p>
<p>In general, you may have more luck installing packages if you use Python 2.7.</p>
</div>
<span class="comment-copy">That package doesn't support Python 3.</span>
<span class="comment-copy">Thank you very much. But just one thing - the problem indicates some basic syntac error like except. Isn't it already part of python?</span>
<span class="comment-copy">The syntax for raising exceptions in Python 3 is slightly different.  Check out this site: <a href="http://docs.python.org/3/howto/pyporting.html" rel="nofollow noreferrer">docs.python.org/3/howto/pyporting.html</a>.  Specifically, look at the "Capturing the Currently Raised Exception" section.</span>
